
2001-09-19  joe c   <marcus@marcuscom.com>

	* libatalk/cnid/cnid_add.c: Fix a bug where some DBT data structures were
	not being memset to NULL correctly.

2001-09-18  joe c   <marcus@marcuscom.com>

	* etc/afpd/afp_options.c: Fix a bug in the custom icon code (thanks to
	Edmund Lam <epl@unimelb.edu.au> for finding this)

2001-09-18  joe c   <marcus@marcuscom.com>

	* libatalk/cnid/cnid_open.c: Added db3 version checking code

2001-09-18  joe c   <marcus@marcuscom.com>

	* config/afpd.conf.tmpl: Removed uams_guest.so from the default UAMs
	list

2001-09-17  jeff b  <jeff@univrel.pr.uconn.edu>

	* acconfig.h, configure.in, etc/afpd/afp_config.c: SLP
	support added (Joe Clarke)

2001-09-14  jeff b  <jeff@univrel.pr.uconn.edu>

	* sys/netatalk/endian.h: fix from Robert Cohen
	<robert.cohen@anu.edu.au> for missing endif

2001-09-13  joe c   <marcus@marcuscom.com>

	* libatalk/util/getiface.c:
	fix some malloc problems when no atalkd.conf file exists

2001-09-10  joe c   <marcus@marcuscom.com>

	* libatalk/util/getiface.c: up the new interface by one
	each time instead of IFACE_NUM

2001-09-10  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/afp_options.c, etc/atalkd/main.c, etc/papd/main.c:
	added version reporting with -v switch

2001-09-06  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/atalkd/main.c, etc/papd/main.c, etc/psf/psf.c,
	libatalk/asp/asp_getsess.c, libatalk/dsi/dsi_getsess.c,
	libatalk/pap/pap_slinit.c, libatalk/util/server_child.c:
	autoconf POSIX.1 sys/wait.h check

	* lots of files: AC_HEADER_STDC autoconf changes

	* sys/netatalk/endian.h: used autoconf endian test instead
	of manually checking every architecture

2001-09-05  joe c <marcus@marcuscom.com>

	* libatalk/cnid/cnid_open.c: comment out DB_JOINENV as this is not
	supported in db3 3.1.17

	* libatalk/cnid/cnid_add.c: fix my comments to properly explain the use
	of rc over errno

2001-09-04  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/filedir.h: define veto_file() prototype (Edmund Lam)
